--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/kalamuna/metalsmith-metadata-files",
   "dependencies": {
-    "extend": "^3.0.0",
+    "extend-shallow": "^2.0.1",
     "multimatch": "^2.1.0"
   },
   "devDependencies": {
