--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metalsmith-metadata-files",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Metalsmith Metadata Files Plugin",
   "files": [
     "index.js"
@@ -25,7 +25,8 @@
   "homepage": "https://github.com/kalamuna/metalsmith-metadata-files",
   "dependencies": {
     "extend-shallow": "^2.0.1",
-    "multimatch": "^2.1.0"
+    "multimatch": "^2.1.0",
+    "traverse": "^0.6.6"
   },
   "devDependencies": {
     "assert-dir-equal": "1.*",
