--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "node test",
     "posttest": "npm run xo",
-    "xo": "xo --space --no-semicolon"
+    "xo": "xo --space=2 --no-semicolon"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,6 @@
     "metalsmith-jstransformer": "*",
     "rimraf": "^2.5.4",
     "testit": "^3.0.0",
-    "xo": "^0.20.0"
+    "xo": "^0.20.2"
   }
 }
